--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -524,7 +524,7 @@ section {
 .hero-animated {
   width: 100%;
   min-height:50vh;
-  background: url("./img/hero-bg.png") center center;
+  background: url("./assets/img/hero-bg.png") center center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -746,12 +746,12 @@ section {
 
 .onfocus .video-play {
   min-height: 400px;
-  background: linear-gradient(rgba(var(--color-black-rgb), 0.4), rgba(var(--color-black-rgb), 0.7)), url("/img/features.png") center center;
+  background: linear-gradient(rgba(var(--color-black-rgb), 0.4), rgba(var(--color-black-rgb), 0.7)), url("/assets/img/features.png") center center;
   background-size: cover;
 }
 
 .onfocus .content {
-  background: linear-gradient(rgba(var(--color-secondary-rgb), 0.5), rgba(var(--color-secondary-rgb), 0.8)), url("/img/onfocus-content-bg.jpg") center center;
+  background: linear-gradient(rgba(var(--color-secondary-rgb), 0.5), rgba(var(--color-secondary-rgb), 0.8)), url("/assets/img/onfocus-content-bg.jpg") center center;
   background-size: cover;
   color: rgba(var(--color-white-rgb), 0.8);
   padding: 40px;
